<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">A. Messedaglia VR</string>
    <string name="link">link</string>
    <string name="Info">Info</string>
    <string name="orario">Timetable</string>
    <string name="notizie">News</string>
    <string name="eventi">Calendar</string>
    <string name="registro">Register</string>
    <string name="circolari">Notices</string>
    <string name="main_title">A. Messedaglia VR</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="mostrapass">Show password</string>
    <string name="salva">Save</string>
    <string name="login">Enable auto login to the electronic register</string>
    <string name="settingssaved">Your new settings have been saved</string>
    <string name="noautologin">Auto login has been disabled</string>
    <string name="noconnection">An internet connection is required</string>
    <string name="nodescription">There\'s no description for this event</string>
    <string name="cancelednews">You aborted News\'s download</string>
    <string name="canceledcalendar">You aborted Events\'s download</string>
    <string name="ical">Import in Calendar</string>
    <string name="downloadingNews">Downloading News…</string>
    <string name="retrievingNews">Retrieving News from database…</string>
    <string name="downloadingEvents">Downloading Events…</string>
    <string name="retrievingEvents">Retrieving Events from database…</string>
    <string name="downloadingNotices">Downloading Notices…</string>
    <string name="palestre">Gym\'s timetable</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="downloading">Downloading</string>
    <string name="retrieving">Retrieving</string>
    <string name="touchReceiver">TouchReceiver</string>
    <string name="suggestion">Send a suggestion</string>
    <string name="notavailable">The function you are trying to use is not yet available</string>
    <string name="contatti">Contacts</string>
    <string name="connerr">There\'s a problem with your Internet connection</string>
    <string name="noapilevel">Your version of Android is too outdated to use this function</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="panini">Panini</string>
    <string name="fine_scuola">School\'s End</string>
    <string name="ondevelopment">This function is still on development, expect new updates soon!</string>
    <string name="howdoesitwork">How does it work?</string>
    <string name="send">Send</string>
    <string name="remember">Ricorda</string>
    <string name="istruzioni">ISTRUCTION:\n Browse the panini list and find more info about them through the info button (i). When you\'ve chosen which paninis you want to order use the plus (+) and minus (-) button to modify the order\'s numbers. When you\'re ready the SEND button, in the top-right corner, will allow you to verify and send your order. The list is opens at 7.45 and closes at 10.05.\nHOW IT WORKS:\n Your order will be processed by the app that will connect to the printer to print your order. The salesperson will then prepare your order that will by paid later at the break. Unavailable ordered paninis will eventually be subtracted from the total.\nRESPONSIBILITY:\n The username and password given are unique for every class and allow to find the class representatives. An improper use of this app will be punished by the school with appropriate disciplinary actions.</string>
    <string name="rembember">Remember</string>
    <string name="upgiven">Insert the username and the password that have been given to you.</string>
    <string name="uppanini">username and password for the Panini\'s List</string>
    <string name="noevents">No Events</string>

    <string-array name="panini_array">
        <item>Cotoletta</item>
        <item>Piadina Crudo</item>
        <item>Piadina Cotto</item>
        <item>Pizza Wurstel</item>
        <item>Pizza Salamino</item>
        <item>Pizza Funghi</item>
        <item>Rustico</item>
        <item>Ghiotto</item>
        <item>Delicato</item>

        <item>Panzerotto</item>

        <item>Cotto e Maio</item>
        <item>Cotto e Funghi (P)</item>
        <item>Cotto e Funghi (F)</item>
        <item>Caprese</item>
        <item>Crudo</item>
        <item>Pizzetta Margherita</item>
        <item>Pizzetta Wurstel</item>
        <item>Pizzetta Salamino</item>
        <item>Tonnata Grande</item>

        <item>Tonnata Piccola</item>
        <item>Cotto</item>
        <item>Mortadella</item>
        <item>Pancetta</item>
        <item>Salame</item>
    </string-array>

    <string-array name="panini_prices_array">
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>
        <item>2.00</item>

        <item>1.50</item>

        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>
        <item>1.20</item>

        <item>0.80</item>
        <item>0.80</item>
        <item>0.80</item>
        <item>0.80</item>
        <item>0.80</item>
    </string-array>

    <string-array name="panini_ingredients_array">
        <item>Chicken cootoletta, salad, maioneese</item>
        <item>Prosciutto crudo, mozzarella</item>
        <item>Baked Ham, mozzarella</item>
        <item>Wurstel, mozzarella, tomatoes</item>
        <item>Salamino, mozzarella, tomatoes</item>
        <item>Mushrooms, mozzarella, tomatoes</item>
        <item>Speck, scamorza, mushrooms</item>
        <item>Mozzarella, tomatoes, origano, Baked Ham e olio e.v.</item>
        <item>Speck, Philadelphia</item>

        <item>Tomatoes, mozzarella</item>

        <item>Baked Ham e maionese</item>
        <item>Baked Ham e mushrooms sauce</item>
        <item>Baked Ham, maionese e mushrooms</item>
        <item>Tomatoes, mozzarella, rucola e olio e.v.</item>

        <item>Ham</item>
        <item>Tomatoes, mozzarella</item>
        <item>Tomatoes, mozzarella, wurstel</item>
        <item>Tomatoes, mozzarella e hot salami</item>
        <item>Tuna sauce e salad</item>

        <item>Tuna sauce e salad</item>
        <item>Baked Ham</item>
        <item>Mortadella</item>
        <item>Bacon</item>
        <item>Salami</item>
    </string-array>
    <string name="defaultclass">Default: </string>
    <string-array name="classi">
        <item>Choose a Class</item>
        <item>1A</item>
        <item>1B</item>
        <item>1C</item>
        <item>1D</item>
        <item>1E</item>
        <item>1F</item>
        <item>1G</item>
        <item>1H</item>
        <item>1I</item>
        <item>1L</item>
        <item>1M</item>
        <item>1N</item>
        <item>1O</item>
        <item>1P</item>
        <item>2A</item>
        <item>2B</item>
        <item>2C</item>
        <item>2D</item>
        <item>2E</item>
        <item>2F</item>
        <item>2G</item>
        <item>2H</item>
        <item>2I</item>
        <item>2L</item>
        <item>2M</item>
        <item>2N</item>
        <item>2O</item>
        <item>2P</item>
        <item>3A</item>
        <item>3B</item>
        <item>3C</item>
        <item>3D</item>
        <item>3E</item>
        <item>3F</item>
        <item>3G</item>
        <item>3H</item>
        <item>3I</item>
        <item>3L</item>
        <item>3M</item>
        <item>4A</item>
        <item>4B</item>
        <item>4C</item>
        <item>4D</item>
        <item>4E</item>
        <item>4F</item>
        <item>4G</item>
        <item>4H</item>
        <item>4I</item>
        <item>5A</item>
        <item>5B</item>
        <item>5C</item>
        <item>5D</item>
        <item>5E</item>
        <item>5F</item>
        <item>5G</item>
    </string-array>
    <string-array name="piani">
        <item>Ground Floor</item>
        <item>Second Floor</item>
    </string-array>
    <string name="gotowebsite">Go to website</string>
    <string name="download">Download</string>
    <string name="per1">Period I</string>
    <string name="per2">Period 2</string>
    <string name="NeedConnection">An internet connection is needed to update the marks</string>
    <string name="absences">Absences</string>
    <string name="late">Late</string>
</resources>
